Bug 495455. Always get correct bounding boxes for text rendered with user fonts, since they are likely to be using unusually-sized glyphs. Mac/Windows only at the moment. r=jdaggett